--- a/Ch6/Question 3/index.html
+++ b/Ch6/Question 3/index.html
@@ -12,25 +12,25 @@
       <input type="text" id="fname" placeholder="Enter your First name"><br/><br/>
 
       <label> Last Name: </label>
-      <input type="text" id="lname" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="lname" placeholder="Enter your Last name"><br/><br/>
 
       <label> Street Address : </label>
-      <input type="text" id="street" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="street" placeholder="Enter your Street Address"><br/><br/>
 
       <label> City </label>
-      <input type="text" id="city" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="city" placeholder="Enter your City"><br/><br/>
 
       <label> State </label>
-      <input type="text" id="state" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="state" placeholder="Enter your State"><br/><br/>
 
       <label> Zip Code </label>
-      <input type="text" id="zip" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="zip" placeholder="Enter your Zip Code"><br/><br/>
 
       <label> Email Address </label>
-      <input type="text" id="email" placeholder="Enter your First name"><br/><br/>
+      <input type="text" id="email" placeholder="Enter your Email"><br/><br/>
 
       <label> Phone Number </label>
-      <input type="text" id="phone" placeholder="Enter your First name"><br/>
+      <input type="text" id="phone" placeholder="Enter your Phone"><br/>
       <label>Example:(289)654-1222</label><br/><br/>
 
       <button onclick="validatephone()">Register </button>
