Improved Code Ch6 Question4

--- a/Ch6/Question 4/index.html
+++ b/Ch6/Question 4/index.html
@@ -57,6 +57,7 @@
       <p id="digit" class="invalid">Your password should contain atleast one digit</p>
       <p id="ucase" class="invalid">Your password should contain atleast one Uppercase Letter</p>
       <p id="lcase" class="invalid">Your password should contain atleast one Lowercase Letter</p>
+      <p id="specialchar" class="invalid">Your password can have atleast one @,*,$,& </p>
     </div>
       <br/>
 
